Changes in version 0.2
======================

STILL UNDER DEVELOPMENT; NOT RELEASED YET.

* Issue 74: Added the kyua-tap-tester, a new backend to interact with
  test programs that comply with the Test Anything Protocol.

* Issue 69: Cope with the lack of AM_PROG_AR in configure.ac, which
  first appeared in Automake 1.11.2.  Fixes a problem in Ubuntu 10.04
  LTS, which appears stuck in 1.11.1.


Changes in version 0.1
======================

Experimental version released on February 19th, 2013.

This is the first public release of the kyua-testers package.

The goal of this first release is to adopt all the test case execution
code of kyua-cli 0.5 and ship it as a collection of independent tester
binaries.  The kyua-cli package will rely on these binaries to run the
tests, which provides better modularity and simplicity to the
architecture of Kyua.

The code in this package is all C as opposed to the current C++ codebase
of kyua-cli, which means that the overall build times of Kyua are now
reduced.